--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
 
         <!--put your external script links here-->
         <script type="text/javascript" src="js/main.js"></script>
+        <script type="text/javascript" src="js/d3.v7.js"></script>
     </body>
 </html>
