--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
     <body>
         <!--put your initial page content here-->
 
+
         <!--you can also use this space for internal scripts;
         place these within <script> tags-->
-
+        
         <!--put your external script links here-->
+        <script type="text/javascript" src="js/topojson.js"></script>
         <script type="text/javascript" src="js/d3.v7.js"></script>
-        <script type="text/javascript" src="js/bubblechart.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
