--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <!--put your external script links here-->
         <script type="text/javascript" src="js/topojson.js"></script>
         <script type="text/javascript" src="js/d3.v7.js"></script>
+        <script type="text/javascript" src="js/colorbrewer.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
