--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-            <title></title>
+            <title>Estimated Deer Harvested 2009 to 2022</title>
 
         <!--put your external stylesheet links here-->
         <link rel="stylesheet" href="css/style.css">
@@ -17,6 +17,17 @@
     </head>
 
     <body>
+        <div class="box">
+            <!-- stuff -->
+            <p class="description">These values 
+                represent the NY DECs Estimated
+                deer harvests for each year per WMU. Buck = 
+                anything with antlers, Antlerless = Anything harvested without antlers.
+            </p>
+
+        </div>
+
+        
         <!--put your initial page content here-->
 
 
@@ -26,7 +37,6 @@
         <!--put your external script links here-->
         <script type="text/javascript" src="js/topojson.js"></script>
         <script type="text/javascript" src="js/d3.v7.js"></script>
-        <script type="text/javascript" src="js/colorbrewer.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
